[gd_scene load_steps=2 format=2]

[ext_resource path="res://HomeBase.gd" type="Script" id=1]

[node name="HomeScreenScene" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="ButtonStart" type="Button" parent="."]
margin_left = 855.0
margin_top = 402.0
margin_right = 1061.0
margin_bottom = 463.0
toggle_mode = true
text = "start"

[node name="ButtonOptions" type="Button" parent="."]
margin_left = 859.0
margin_top = 495.0
margin_right = 1058.0
margin_bottom = 558.0
text = "option"

[node name="ButtonLeaderboard" type="Button" parent="."]
margin_left = 857.0
margin_top = 581.0
margin_right = 1061.0
margin_bottom = 647.0
text = "leaderboard"

[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="ButtonLeaderboard" to="." method="_on_ButtonLeaderboard_pressed"]
